# ECC-Framework

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SECURITY.md  main.cpp
include/Cryptography/: HMAC.h  HashFunctions.h  Twofish.h  TwofishWrapper.h
include/ECC/: ECC.h  ECCDomainParameters.h  ECCKey.h  ECCPrivateKey.h  ECCPublicKey.h  ECDHE.h  ECDSA.h  ECElGamal.h  ECIES.h  ECIESCryptographySuits.h  StandardCurves.h
include/Math/: ECPoint.h  EllipticCurve.h  EllipticCurveFq.h  ExtensionField.h
include/Utils/: Common.h
src/Cryptography/: HMAC.cpp  HashFunctions.cpp  Twofish.c  TwofishWrapper.cpp
src/Cryptography/argon2/src/: argon2.c  core.h  encoding.h  opt.c
src/Cryptography/argon2/src/blake2/: blake2.h
src/ECC/: ECC.cpp  ECCDomainParameters.cpp  ECCKey.cpp  ECCPrivateKey.cpp  ECCPublicKey.cpp  ECDHE.cpp  ECDSA.cpp  ECElGamal.cpp  ECIES.cpp  ECIESCryptographySuits.cpp  StandardCurves.cpp
src/Math/: ECPoint.cpp  EllipticCurve.cpp  EllipticCurveFq.cpp  ExtensionField.cpp
src/Utils/: Common.cpp
